--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "chart.js": "^4.4.8",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
     "toastify": "^2.0.1"
   },
   "devDependencies": {
