--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.344.0",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.22.3",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
+    "sweetalert2": "^11.17.2",
     "toastify": "^2.0.1"
   },
   "devDependencies": {
