--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -3,18 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-   "start": "node server.js",
-   "dev": "nodemon server.js"
-
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.12.1"
+    "mongoose": "^8.12.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
